<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.AuthActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobile_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/number" />

            </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/profile_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matrimony_profile"
                    android:layout_marginTop="10dp"
                    android:inputType="none"
                    android:focusable="false"/>

            <EditText
                android:id="@+id/dob_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:hint="@string/date_of_birth"
                android:inputType="none" />

<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

                <EditText
                    android:id="@+id/country_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/living_country"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    />

<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

                <EditText
                    android:id="@+id/gender_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:inputType="none"
                    android:focusable="false"
                    android:layout_marginTop="10dp"/>

<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

                <EditText
                    android:id="@+id/martial_status_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/martial_status"
                    android:inputType="none"
                    android:focusable="false"
                    android:layout_marginTop="10dp"/>

<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_btn_bg"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="30dp"/>

            <com.weds.lordbond.custom_view.TextViewBoldLordBond
                android:id="@+id/do_sign_in_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_signin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_marginTop="40dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>