<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cancle_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_cancel_white"
        android:tint="@color/colorPrimary" />

    <com.weds.lordbond.custom_view.LordBondTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/filter_profile"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/filter_age_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/cancle_btn"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.weds.lordbond.custom_view.LordBondTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/age"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/age_filter_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="25 - 30 Yrs"
                android:gravity="right"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/colorPrimaryDark"
                />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/app_item_divider"
            android:layout_marginTop="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_city_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/filter_age_ll"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.weds.lordbond.custom_view.LordBondTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/city"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/city_filter_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="Indoor"
                android:gravity="right"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/colorPrimaryDark"
                />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/app_item_divider"
            android:layout_marginTop="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_cast_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/filter_city_ll"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.weds.lordbond.custom_view.LordBondTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/cast"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/cast_filter_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="General"
                android:gravity="right"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/colorPrimaryDark"
                />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/app_item_divider"
            android:layout_marginTop="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_salary_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/filter_cast_ll"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.weds.lordbond.custom_view.LordBondTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/salary"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/salary_filter_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="25000 - 30000"
                android:gravity="right"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/colorPrimaryDark"
                />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/app_item_divider"
            android:layout_marginTop="5dp"/>


    </LinearLayout>


</RelativeLayout>